Migrate a few tests to use devnet

--- a/.env.devnet
+++ b/.env.devnet
@@ -3,6 +3,7 @@ source .env
 export STARKNET_RPC="http://0.0.0.0:5050/rpc"
 export STARKNET_CHAIN_ID="SN_SEPOLIA"
 export SALT="0x42"
+export DEVNET_DUMP_PATH="./assets/devnet-dump.json"
 
 export CAIRO_VERSION=2.6.2
 export SCARB_VERSION=2.6.2
