--- a/melos.yaml
+++ b/melos.yaml
@@ -54,7 +54,12 @@ scripts:
   devnet:start:
     description: Start local devnet
     run: |
-      starknet-devnet --seed 0
+      starknet-devnet --seed 0 --dump-path $DEVNET_DUMP_PATH
+  devnet:start-dump:
+    description: Start local devnet in dump mode
+    run: |
+      rm ./assets/devnet-dump.json
+      starknet-devnet --seed 0 --dump-path $DEVNET_DUMP_PATH --dump-on exit
   devnet:setup:
     description: Setup local devnet
     run: |
