--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,22 +2,14 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Test",
+      "name": "Run Tests",
       "request": "launch",
       "type": "dart",
-      "program": "test"
-    },
-    {
-      "name": "Example ERC20",
-      "request": "launch",
-      "type": "dart",
-      "program": "${workspaceFolder}/example/examples/erc20.dart"
-    },
-    {
-      "name": "Current device (Debug Mode)",
-      "request": "launch",
-      "type": "dart",
-      "flutterMode": "debug"
+      "env": {
+        "STARKNET_RPC": "http://localhost:5050",
+        "DEVNET_DUMP_PATH": "./assets/devnet-dump.json"
+      },
+      "templateFor": ""
     }
   ]
 }
