--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,12 +36,14 @@ jobs:
 
   test-integration:
     runs-on: ubuntu-latest
-    # needs: lint
+    needs: lint
     services:
       devnet:
+        options: --name devnet-service
         image: shardlabs/starknet-devnet-rs:0.0.5
         ports:
           - 5050:5050
+        entrypoint: sh -c "starknet-devnet --seed 0 --dump-path devnet-dump.json"
     steps:
       - uses: actions/checkout@v2
       - uses: flutter-actions/setup-flutter@v3
@@ -52,4 +54,5 @@ jobs:
           cache-sdk: true
       - uses: bluefireteam/melos-action@v3
       - run: melos bootstrap
+      - run: docker cp ./assets/devnet-dump.json devnet-service:devnet-dump.json
       - run: melos test:dart:integration
