--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
 
   test-integration:
     runs-on: ubuntu-latest
-    needs: lint
+    # needs: lint
     services:
       devnet:
         options: --name devnet-service
