--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,6 @@ jobs:
 
   test-unit:
     runs-on: ubuntu-latest
-    needs: lint
     steps:
       - uses: actions/checkout@v2
       - uses: flutter-actions/setup-flutter@v3
@@ -36,13 +35,12 @@ jobs:
 
   test-integration:
     runs-on: ubuntu-latest
-    # needs: lint
-    services:
-      devnet:
-        options: --name devnet-service
-        image: shardlabs/starknet-devnet-rs:0.0.5
-        ports:
-          - 5050:5050
+    # services:
+    #   devnet:
+    #     options: --name devnet-service
+    #     image: shardlabs/starknet-devnet-rs:0.0.5
+    #     ports:
+    #       - 5050:5050
     steps:
       - uses: actions/checkout@v2
       - uses: flutter-actions/setup-flutter@v3
@@ -53,5 +51,18 @@ jobs:
           cache-sdk: true
       - uses: bluefireteam/melos-action@v3
       - run: melos bootstrap
-      - run: docker cp ./assets/devnet-dump.json devnet-service:devnet-dump.json
+      # - run: docker cp ./assets/devnet-dump.json devnet-service:devnet-dump.json
+      - name: Run starknet-devnet as a background process
+        run: |
+          docker run -d --name starknet-devnet \
+            -v ${{ github.workspace }}/assets/devnet-dump.json:/usr/local/bin/devnet-dump.json \
+            --entrypoint tini \
+            shardlabs/starknet-devnet-rs:0.0.5 -- \
+            starknet-devnet --host 0.0.0.0 --seed 0 --dump-path /usr/local/bin/devnet-dump.json
+        - name: Wait for starknet-devnet to be ready
+          run: |
+            while ! nc -z localhost 5000; do   
+              echo "Waiting for starknet-devnet to start..."
+              sleep 1
+            done
       - run: melos test:dart:integration
