--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,17 +59,12 @@ jobs:
       - name: Run starknet-devnet as a background process
         run: |
           docker run -d --name starknet-devnet \
-            -v /Users/gabin/src/focustree/starknet.dart/assets/devnet-dump.json:/devnet-dump.json \
+            -v ${{ github.workspace }}/assets/devnet-dump.json:/devnet-dump.json \
             -p 5050:5050 \
             --entrypoint tini \
             shardlabs/starknet-devnet-rs:0.0.5 -- \
             starknet-devnet --host 0.0.0.0 --seed 0 --dump-path /devnet-dump.json
-      - name: Wait for starknet-devnet to be ready
-        run: |
-          while ! nc -z localhost 5050; do   
-            echo "Waiting for starknet-devnet to start..."
-            sleep 1
-          done
+      - run: curl http://localhost:5050/predeployed_accounts
       - run: melos test:dart:integration
       - name: Cleanup
         if: always()
