--- a/melos.yaml
+++ b/melos.yaml
@@ -29,7 +29,7 @@ scripts:
   starknet:setup:
     description: Install starknet dev env
     run: |
-      cargo install starknet-devnet --version $STARKNET_DEVNET_VERSION
+      cargo install starknet-devnet --version $STARKNET_DEVNET_VERSION 2> /dev/null 2>&1
 
       asdf plugin add scarb
       asdf install scarb $SCARB_VERSION
