--- a/packages/ark/pubspec.yaml
+++ b/packages/ark/pubspec.yaml
@@ -6,6 +6,8 @@ environment:
   sdk: ^3.3.3
 
 dependencies:
+  starknet:
+  starknet_provider:
   http: ^1.2.1
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
