--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
             -p 5050:5050 \
             --entrypoint tini \
             shardlabs/starknet-devnet-rs:$STARKNET_DEVNET_VERSION -- \
-            starknet-devnet --host 0.0.0.0 --seed 0 --dump-path $DEVNET_DUMP_PATH
+            starknet-devnet --host 0.0.0.0 --seed 0 --dump-path $DEVNET_DUMP_PATH --state-archive-capacity full
             sleep 3  # Wait for 3 seconds for the Docker container to initialize
       - run: melos test:dart:integration
       - name: Cleanup
