`read_provider_test` migrate to devnet (#384)
* scratch changes

* in progress

* in progress

* fix

* fix

* in progress

* in progress

* added simulation_flags

* fix

* clean up

* fix recipit

* fix tests

* clean up

* clean up

* clean up

* clean up

* fix devnet ci

* clean up

* clean up

* satisfy review

* clean up

* clean up

* fix hello contract

* fix hello contract

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ coverage/
 !.env.example
 !.env.mainnet.example
 !.env.devnet.example
+!.env.devnet
+
+# deploy for test
+.starkli/account_1.json
+
