--- a/packages/ark/pubspec.yaml
+++ b/packages/ark/pubspec.yaml
@@ -3,7 +3,7 @@ description: A starting point for Dart libraries or applications.
 version: 1.0.0
 
 environment:
-  sdk: ^3.3.3
+  sdk: ">=3.0.0 <4.0.0" # Dart version constraint
 
 dependencies:
   starknet:
