[fix] install scarb using the env version

--- a/melos.yaml
+++ b/melos.yaml
@@ -87,6 +87,7 @@ scripts:
   contract:check:
     description: Check cairo contracts
     run: |
+      asdf install scarb $SCARB_VERSION
       cd contracts/v$CAIRO_VERSION
       scarb check
 
