--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,8 +82,7 @@ jobs:
           filters: |
             contracts_dir: 
               - 'contracts/v2.6.2/**'
-
       - uses: bluefireteam/melos-action@v3
-      - name: Run scarb check
-        if: steps.changes.outputs.contracts_dir == 'true'
-        run: melos contracts:check
+      - run: |
+          if: steps.changes.outputs.contracts_dir == 'true'
+          melos test:dart:unit
