Update starknet counter for Sepolia (devnet and testnet)

--- a/examples/starknet_counter/pubspec_overrides.yaml
+++ b/examples/starknet_counter/pubspec_overrides.yaml
@@ -2,15 +2,9 @@ dependency_overrides:
   path: ^1.8.3
   http: ^1.0.0
   starknet:
-    git:
-      url: https://github.com/gabsn/starknet.dart
-      path: packages/starknet
-      ref: focustree
+    path: ../../packages/starknet
   starknet_provider:
-    git:
-      url: https://github.com/gabsn/starknet.dart
-      path: packages/starknet_provider
-      ref: focustree
+    path: ../../packages/starknet_provider
   # wallet_kit:
   #   git:
   #     url: https://github.com/focustree/starknet.dart
