--- a/examples/wallet_app/pubspec.yaml
+++ b/examples/wallet_app/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   wallet_kit:
   starknet_provider:
+  ark:
   starknet:
   secure_store:
   cupertino_icons: ^1.0.2
