--- a/packages/starknet_provider/pubspec.yaml
+++ b/packages/starknet_provider/pubspec.yaml
@@ -8,13 +8,13 @@ environment:
 
 dependencies:
   starknet:
-  freezed_annotation: ^2.0.3
-  http: ^1.0.0
-  json_annotation: ^4.5.0
+  freezed_annotation: ^2.4.1
+  http: ^1.2.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
-  build_runner: ^2.1.11
-  freezed: ^2.0.3+1
-  json_serializable: ^6.2.0
-  lints: ^2.0.0
-  test: ^1.16.0
+  build_runner: ^2.4.9
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
+  lints: ^3.0.0
+  test: ^1.24.0
