--- a/examples/wallet_app/pubspec.yaml
+++ b/examples/wallet_app/pubspec.yaml
@@ -11,9 +11,9 @@ dependencies:
     sdk: flutter
   wallet_kit:
   starknet_provider:
-  ark:
-  starknet:
-  secure_store:
+  ark: ^0.1.0
+  starknet: ^0.1.0
+  secure_store: ^0.1.2
   cupertino_icons: ^1.0.2
   hooks_riverpod: ^2.3.6
   flutter_hooks: ^0.20.5
