--- a/packages/starknet_provider/pubspec.yaml
+++ b/packages/starknet_provider/pubspec.yaml
@@ -1,7 +1,7 @@
 name: starknet_provider
 description: A starting point for Dart libraries or applications.
-version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+version: 0.1.0
+repository: https://github.com/focustree/starknet.dart
 
 environment:
   sdk: ^3.0.5
