--- a/examples/nft_marketplace/pubspec.yaml
+++ b/examples/nft_marketplace/pubspec.yaml
@@ -28,11 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  ark:
-  starknet:
-  starknet_provider:
-  secure_store:
-  wallet_kit:
+  ark: ^0.1.0
+  starknet: ^0.1.0
+  starknet_provider: ^0.1.0
+  secure_store: ^0.1.2
+  wallet_kit: ^0.0.1
 
   flutter:
     sdk: flutter
@@ -43,7 +43,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   riverpod_annotation: ^2.3.5
   riverpod: ^2.5.1
-  go_router: ^14.2.9 
+  go_router: ^14.2.9
 
 dev_dependencies:
   flutter_test:
