--- a/packages/starknet/pubspec.yaml
+++ b/packages/starknet/pubspec.yaml
@@ -1,13 +1,12 @@
 name: starknet
 description: The Dart SDK to interact with any smart contracts on StarkNet
 version: 0.1.0
-repository: https://github.com/gabsn/starknet.dart
+repository: https://github.com/focustree/starknet.dart
 
 environment:
   sdk: ">=2.17.3 <4.0.0"
 
 dependencies:
-  starknet_provider: ^1.0.0
   bip32: ^2.0.0
   bip39: ^1.0.6
   crypto: ^3.0.5
@@ -15,6 +14,7 @@ dependencies:
   http: ^1.2.2
   json_annotation: ^4.9.0
   pointycastle: ^3.9.1
+  starknet_provider: ^1.0.0
 
 dev_dependencies:
   build_runner: ^2.4.13
