--- a/contracts/v2.6.2/Scarb.toml
+++ b/contracts/v2.6.2/Scarb.toml
@@ -1,13 +1,17 @@
 [package]
-name = "starknet_dart"
+name = "contract2"
 version = "0.1.0"
 edition = "2023_11"
 
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
-starknet = ">=2.5.4"
+starknet = ">=2.6.0"
+openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.10.0" }
 
+[lib]
 
 [[target.starknet-contract]]
-
+sierra = true
+casm = true
+caml = true
