chore: Prepare packages for publish

--- a/melos.yaml
+++ b/melos.yaml
@@ -7,6 +7,10 @@ packages:
   - contracts/v$CAIRO_VERSION/**
 
 ignore:
+  # not ready for publishing
+  - packages/wallet_kit
+  # needs new name
+  - packages/ark
 
 command:
   bootstrap:
