--- a/examples/wallet_app/pubspec.yaml
+++ b/examples/wallet_app/pubspec.yaml
@@ -9,21 +9,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  wallet_kit:
-  starknet_provider:
-  ark_project: ^0.1.0
-  starknet: ^0.1.0
-  secure_store: ^0.1.2
+  wallet_kit: ^0.0.1
   cupertino_icons: ^1.0.2
-  hooks_riverpod: ^2.3.6
-  flutter_hooks: ^0.20.5
-  go_router: ^14.2.9
   hive_flutter: ^1.1.0
+  hooks_riverpod: ^2.6.1
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
   build_runner: ^2.4.6
   starknet_builder:
 
@@ -49,3 +44,5 @@ flutter:
           weight: 200
         - asset: assets/fonts/SF-Pro-Rounded-Ultralight.otf
           weight: 100
+  assets:
+    - .env
