--- a/examples/wallet_app/pubspec.yaml
+++ b/examples/wallet_app/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   wallet_kit:
   starknet_provider:
-  ark:
+  ark_project:
   starknet:
   secure_store:
   cupertino_icons: ^1.0.2
