--- a/examples/nft_marketplace/pubspec_overrides.yaml
+++ b/examples/nft_marketplace/pubspec_overrides.yaml
@@ -1,13 +1,10 @@
+# melos_managed_dependency_overrides: ark_project,secure_store,starknet,starknet_provider
 dependency_overrides:
-  ark:
-    path: ../../packages/ark
+  ark_project:
+    path: ../../packages/ark_project
+  secure_store:
+    path: ../../packages/secure_store
   starknet:
     path: ../../packages/starknet
   starknet_provider:
     path: ../../packages/starknet_provider
-  starknet_builder:
-    path: ../../packages/starknet_builder
-  secure_store:
-    path: ../../packages/secure_store
-  wallet_kit:
-    path: ../../packages/wallet_kit
