--- a/examples/wallet_app/pubspec_overrides.yaml
+++ b/examples/wallet_app/pubspec_overrides.yaml
@@ -1,11 +1,12 @@
+# melos_managed_dependency_overrides: ark_project,secure_store,starknet,starknet_builder,starknet_provider
 dependency_overrides:
-  starknet:
-    path: ../../packages/starknet
-  starknet_provider:
-    path: ../../packages/starknet_provider
-  starknet_builder:
-    path: ../../packages/starknet_builder
+  ark_project:
+    path: ../../packages/ark_project
   secure_store:
     path: ../../packages/secure_store
-  wallet_kit:
-    path: ../../packages/wallet_kit
+  starknet:
+    path: ../../packages/starknet
+  starknet_builder:
+    path: ../../packages/starknet_builder
+  starknet_provider:
+    path: ../../packages/starknet_provider
