--- a/.github/workflows/release-tag.yaml
+++ b/.github/workflows/release-tag.yaml
@@ -21,7 +21,7 @@ jobs:
           tag: true
       - run: |
           melos exec -c1 --no-published --no-private --order-dependents -- \
-          gh workflow run release-publish.yml \
+          gh workflow run release-publish.yaml \
           --ref \$MELOS_PACKAGE_NAME-v\$MELOS_PACKAGE_VERSION
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
