CI: use same flutter version for all workflows

--- a/.github/workflows/code_health.yaml
+++ b/.github/workflows/code_health.yaml
@@ -21,9 +21,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.7
+      - name: Dotenv Action
+        id: load-env
+        uses: falti/dotenv-action@v1.1.4
+        with:
+          path: .env.ci
       - uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
+          flutter-version: ${{ steps.load-env.outputs.flutter_version }}
           cache: true
       - uses: bluefireteam/melos-action@v3
       - name: "Run Analyze"
@@ -33,9 +38,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.7
+      - name: Dotenv Action
+        id: load-env
+        uses: falti/dotenv-action@v1.1.4
+        with:
+          path: .env.ci
       - uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
+          flutter-version: ${{ steps.load-env.outputs.flutter_version }}
           cache: true
       - uses: bluefireteam/melos-action@v3
       - name: "Pub Check"
@@ -47,9 +57,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.7
+      - name: Dotenv Action
+        id: load-env
+        uses: falti/dotenv-action@v1.1.4
+        with:
+          path: .env.ci
       - uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
+          flutter-version: ${{ steps.load-env.outputs.flutter_version }}
           cache: true
       - uses: bluefireteam/melos-action@v3
       - name: "flutter pub get"
