--- a/.github/workflows/release-prepare.yaml
+++ b/.github/workflows/release-prepare.yaml
@@ -19,7 +19,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Dotenv Action
+        id: load-env
+        uses: falti/dotenv-action@v1.1.4
+        with:
+          path: .env.ci
       - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ steps.load-env.outputs.flutter_version }}
       - uses: bluefireteam/melos-action@v3
         with:
           run-versioning: ${{ inputs.prerelease == false }}
