CI: add flutter-setup action

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,16 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Dotenv Action
-        id: load-env
-        uses: falti/dotenv-action@v1.1.4
-        with:
-          path: .env.ci
-      - uses: flutter-actions/setup-flutter@v3
-        with:
-          version: ${{ steps.load-env.outputs.flutter_version }}
-          cache: true
-          cache-sdk: true
+      - name: Flutter setup
+        uses: ./.github/actions/flutter-setup
       - uses: bluefireteam/melos-action@v3
       - run: melos bootstrap
       - run: melos format:check
@@ -31,16 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Dotenv Action
-        id: load-env
-        uses: falti/dotenv-action@v1.1.4
-        with:
-          path: .env.ci
-      - uses: flutter-actions/setup-flutter@v3
-        with:
-          version: ${{ steps.load-env.outputs.flutter_version }}
-          cache: true
-          cache-sdk: true
+      - name: Flutter setup
+        uses: ./.github/actions/flutter-setup
       - uses: bluefireteam/melos-action@v3
       - run: melos bootstrap
       - run: melos test:dart:unit
@@ -49,16 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Dotenv Action
-        id: load-env
-        uses: falti/dotenv-action@v1.1.4
-        with:
-          path: .env.ci
-      - uses: flutter-actions/setup-flutter@v3
-        with:
-          version: ${{ steps.load-env.outputs.flutter_version }}
-          cache: true
-          cache-sdk: true
+      - name: Flutter setup
+        uses: ./.github/actions/flutter-setup
       - uses: bluefireteam/melos-action@v3
       - run: melos bootstrap
       - name: Retrieve starknet devnet version
@@ -86,11 +62,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Dotenv Action
-        id: load-env
-        uses: falti/dotenv-action@v1.1.4
-        with:
-          path: .env.ci
       - name: Check for changes
         uses: dorny/paths-filter@v3
         id: changes
@@ -98,11 +69,8 @@ jobs:
           filters: |
             contracts_dir: 
               - 'contracts/v2.6.2/**'
-      - uses: flutter-actions/setup-flutter@v3
-        with:
-          version: ${{ steps.load-env.outputs.flutter_version }}
-          cache: true
-          cache-sdk: true
+      - name: Flutter setup
+        uses: ./.github/actions/flutter-setup
       - uses: bluefireteam/melos-action@v3
       - name: Run scarb check
         if: steps.changes.outputs.contracts_dir == 'true'
