--- a/.github/workflows/code_health.yaml
+++ b/.github/workflows/code_health.yaml
@@ -21,15 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.7
-      - name: Dotenv Action
-        id: load-env
-        uses: falti/dotenv-action@v1.1.4
-        with:
-          path: .env.ci
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ steps.load-env.outputs.flutter_version }}
-          cache: true
+      - name: Flutter setup
+        uses: ./.github/actions/flutter-setup
       - uses: bluefireteam/melos-action@v3
       - name: "Run Analyze"
         run: melos run analyze
@@ -38,15 +31,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.7
-      - name: Dotenv Action
-        id: load-env
-        uses: falti/dotenv-action@v1.1.4
-        with:
-          path: .env.ci
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ steps.load-env.outputs.flutter_version }}
-          cache: true
+      - name: Flutter setup
+        uses: ./.github/actions/flutter-setup
       - uses: bluefireteam/melos-action@v3
       - name: "Pub Check"
         run: |
@@ -57,15 +43,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.7
-      - name: Dotenv Action
-        id: load-env
-        uses: falti/dotenv-action@v1.1.4
-        with:
-          path: .env.ci
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ steps.load-env.outputs.flutter_version }}
-          cache: true
+      - name: Flutter setup
+        uses: ./.github/actions/flutter-setup
       - uses: bluefireteam/melos-action@v3
       - name: "flutter pub get"
         run: |
