fix(secure_store)!: add missing gradle configuration required by flutter 3.27

--- a/packages/secure_store/android/build.gradle
+++ b/packages/secure_store/android/build.gradle
@@ -25,6 +25,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace 'com.example.secure_store'
+
     compileSdkVersion 31
 
     compileOptions {
@@ -42,6 +44,10 @@ android {
 
     defaultConfig {
         minSdkVersion 23
+    }
+
+    buildFeatures {
+        buildConfig = true
     }
 }
 
