--- a/packages/wallet_kit/pubspec.yaml
+++ b/packages/wallet_kit/pubspec.yaml
@@ -1,6 +1,6 @@
 name: wallet_kit
 description: A new Flutter package project.
-version: 0.0.2+2
+version: 0.0.3
 homepage: "https://starknetdart.dev"
 
 environment:
