fix: build examples/wallet_app with java 21

--- a/.github/actions/android-setup/action.yaml
+++ b/.github/actions/android-setup/action.yaml
@@ -1,4 +1,5 @@
 name: 'Setup environment to build Android application'
+description: 'Configures Java and Android SDK for building Android applications'
 
 runs:
   using: "composite"
