--- a/examples/nft_marketplace/pubspec.yaml
+++ b/examples/nft_marketplace/pubspec.yaml
@@ -28,11 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  ark_project: ^0.1.0+2
+  arkproject: ^0.1.0+2
   starknet: ^0.1.1
   starknet_provider: ^0.1.1
   secure_store: ^0.1.2+1
-  wallet_kit: ^0.0.3
+  walletkit: ^0.0.3
 
   flutter:
     sdk: flutter
