--- a/docs.yaml
+++ b/docs.yaml
@@ -28,5 +28,6 @@ sidebar:
         - "/packages/secure-store"
       - - Wallet Kit
         - "/packages/wallet-kit"
+      - - Avnu Paymaster Provider
+        - "/packages/avnu_provider"
   - - How to Contribute
-    - "/how-to-contribute"
