--- a/packages/avnu_provider/pubspec.yaml
+++ b/packages/avnu_provider/pubspec.yaml
@@ -8,15 +8,15 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  starknet: ^0.1.0+1
+  starknet: ^0.1.2
   freezed_annotation: ^2.4.4
-  http: ^1.2.2
+  http: ^1.3.0
   json_annotation: ^4.9.0
   pointycastle: ^3.9.1
 
 dev_dependencies:
-  build_runner: ^2.4.13
-  freezed: ^2.5.7
-  json_serializable: ^6.8.0
-  lints: ^5.0.0
-  test: ^1.25.8
+  build_runner: ^2.4.15
+  freezed: ^2.5.8
+  json_serializable: ^6.9.4
+  lints: ^5.1.1
+  test: ^1.25.15
