avnu_provider: initial version is 0.0.1

--- a/packages/avnu_provider/pubspec.yaml
+++ b/packages/avnu_provider/pubspec.yaml
@@ -1,6 +1,6 @@
 name: avnu_provider
 description: Avnu provider for Dart and Flutter applications.
-version: 0.1.0+1
+version: 0.0.1
 repository: https://github.com/focustree/starknet.dart
 
 environment:
