fix(docs): missing sidebar

--- a/docs.yaml
+++ b/docs.yaml
@@ -31,3 +31,5 @@ sidebar:
       - - Avnu Paymaster Provider
         - "/packages/avnu_provider"
   - - How to Contribute
+    - "/how-to-contribute"
+
