wallet_kit: update package description

--- a/packages/wallet_kit/pubspec.yaml
+++ b/packages/wallet_kit/pubspec.yaml
@@ -1,5 +1,5 @@
 name: wallet_kit
-description: Wallet Kit.
+description: A UI toolkit that simplifies blockchain wallet integration in Flutter apps.
 version: 0.2.0
 homepage: "https://starknetdart.dev"
 
