--- a/packages/starknet/pubspec.yaml
+++ b/packages/starknet/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.1.2+1
 repository: https://github.com/focustree/starknet.dart
 
 environment:
-  sdk: ">=2.17.3 <4.0.0"
+  sdk: ^3.5.3
 
 dependencies:
   bip32: ^2.0.0
