--- a/packages/avnu_provider/pubspec.yaml
+++ b/packages/avnu_provider/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^1.3.0
   json_annotation: ^4.9.0
   pointycastle: ^3.9.1
+  starknet_provider: ^0.1.2+1
 
 dev_dependencies:
   build_runner: ^2.4.15
