--- a/.env.ci
+++ b/.env.ci
@@ -2,3 +2,4 @@ FLUTTER_VERSION=3.27.1
 JAVA_VERSION=21
 STARKNET_RPC=http://localhost:5050
 DEVNET_DUMP_PATH=/devnet-dump.json
+STARKLI_VERSION=0.2.9
