--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,8 @@ jobs:
       - name: Flutter setup
         uses: ./.github/actions/flutter-setup
       - uses: bluefireteam/melos-action@v3
+      - name: Install asdf
+        uses: asdf-vm/actions/setup@v3
       - run: melos bootstrap
       - name: Retrieve starknet devnet version
         shell: bash
@@ -51,6 +53,10 @@ jobs:
             shardlabs/starknet-devnet-rs:$STARKNET_DEVNET_VERSION -- \
             starknet-devnet --host 0.0.0.0 --seed 0 --dump-path $DEVNET_DUMP_PATH --state-archive-capacity full
             sleep 3  # Wait for 3 seconds for the Docker container to initialize
+      - name: Declare Argent account
+        run: |
+          melos asdf:starkli
+          melos contracts:argent:declare
       - run: melos test:dart:integration
       - name: Cleanup
         if: always()
